objects/Lease_Schedule_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Year_03_Guaranteed_Output_Low_Value__c</fullName>
        <description>Displays the low value guaranteed output information from the corresponding Guaranteed Output field with both values.  Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</description>
        <formula>LEFT ( 
Year_03_Guaranteed_Output__c ,
FIND ( &quot;-&quot; , Year_03_Guaranteed_Output__c ) - 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the low value guaranteed output information from the corresponding Guaranteed Output field with both values.  Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</inlineHelpText>
        <label>Year 03 Guaranteed Output - Low Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_03_Guaranteed_Output__c</fullName>
        <description>Used to display guaranteed values from the lease schedule onto the lease schedule summary object for Booking Template reporting purposes.  Please do not modify without consulting a Sys Admin.</description>
        <label>Year 03 Guaranteed Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_10_Annual_Lease_Payment__c</fullName>
        <description>This is a rollup of all lease payments for the year and is used for reporting.  Please do not modify field properties without consulting a sys admin.</description>
        <inlineHelpText>This is a rollup of all lease payments for the year and is used for reporting.  Please do not modify field properties without consulting a sys admin.</inlineHelpText>
        <label>Year 10 Annual Lease Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_11_Annual_Lease_Payment__c</fullName>
        <description>This is a rollup of all lease payments for the year and is used for reporting.  Please do not modify field properties without consulting a sys admin.</description>
        <inlineHelpText>This is a rollup of all lease payments for the year and is used for reporting.  Please do not modify field properties without consulting a sys admin.</inlineHelpText>
        <label>Year 11 Annual Lease Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_12_Annual_Lease_Payment__c</fullName>
        <description>This is a rollup of all lease payments for the year and is used for reporting.  Please do not modify field properties without consulting a sys admin.</description>
        <inlineHelpText>This is a rollup of all lease payments for the year and is used for reporting.  Please do not modify field properties without consulting a sys admin.</inlineHelpText>
        <label>Year 12 Annual Lease Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr_01_Annual_Lease_Payment__c</fullName>
        <description>These are formula fields that calculate the annual lease payment for each year of the loan. The formula is based on the MLP (field on lease schedule summary)</description>
        <formula>(Y1_MLP__c  * 11) +  Payment_Amount_Yr_1_Month_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yr 01 Annual Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr_02_Annual_Lease_Payment__c</fullName>
        <description>These are formula fields that calculate the annual lease payment for each year of the loan. The formula is based on the MLP (field on lease schedule summary)</description>
        <formula>Y2_MLP__c  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yr 02 Annual Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr_03_Annual_Lease_Payment__c</fullName>
        <description>These are formula fields that calculate the annual lease payment for each year of the loan. The formula is based on the MLP (field on lease schedule summary)</description>
        <formula>Y3_MLP__c  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yr 03 Annual Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Lease Schedule Summary</label>
    <nameField>
        <displayFormat>LSS-{0000}</displayFormat>
        <label>Lease  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Schedule Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>